# crewai_coder_team

./: README.md  pyproject.toml
src/coder_team/: crew.py  main.py
src/coder_team/config/: agents.yaml
