[project]
name = "coder_team"
version = "0.1.0"
description = "coder_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
coder_team = "coder_team.main:run"
run_crew = "coder_team.main:run"
train = "coder_team.main:train"
replay = "coder_team.main:replay"
test = "coder_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
